src/objects/APTS_External_System__c.object
<CustomObject>
    <fields>
        <fullName>APTS_List_Price__c</fullName>
        <formula>Price_List_Item__r.Apttus_Config2__ListPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price__c</fullName>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External Systems</relationshipLabel>
        <relationshipName>External_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_System__c</fullName>
        <label>External System</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital Webshop Denmark</fullName>
                </value>
                <value>
                    <fullName>TransGourmet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_List_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>External Systems</relationshipLabel>
        <relationshipName>External_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Price_List_Item__r.Apttus_Config2__ProductId__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <label>External System</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>External_System__c</columns>
        <columns>Account__c</columns>
        <columns>APTS_Net_Price__c</columns>
        <columns>Price_List_Item__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>External System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>